<resources>
    <string name="app_name">FoodPandaAppClone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Log in / Create account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="deliver_to">deliver to:</string>
    <string name="current_location">Current Location</string>
    <string name="log_in">Log in</string>
    <string name="facebook_app_id">315037055874672</string>
    <string name="fb_login_protocol_scheme">fb315037055874672</string>
    <string name="or">OR</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in_mail">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_create_an_account">New user? Create an account</string>


</resources>
