<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/cross_out"
            android:id="@+id/cross_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="15dp"/>
    </LinearLayout>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="215dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        facebook:com_facebook_login_text="log in with Facebook"
        android:textAllCaps="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <View
            android:id="@+id/first"
            android:layout_width="149dp"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/orColor"
            android:layout_toLeftOf="@+id/or_text"
            android:layout_toStartOf="@+id/or_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/or_text_style"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/or" />

        <View
            android:id="@+id/second"
            android:layout_width="149dp"
            android:layout_height="1dp"
            android:layout_toRightOf="@+id/or_text"
            android:layout_marginTop="9dp"
            android:background="@color/orColor"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/or_text" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/email_et"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password_et"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/btn_style"
        android:text="@string/log_in"
        android:id="@+id/sign_in_btn"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:textColor="@color/colorPink"
        android:textStyle="normal"
        android:id="@+id/forgot_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_create_an_account"
        android:textColor="@color/colorPink"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:id="@+id/new_user"/>


</LinearLayout>